[project]
name = "Machine_Learning_project"
description = "This is my Machine_Learning_project for ML class at SahmYook University"

dependencies = [
    "python==3.10",
    "jupyter==1.1.1",
    "matplotlib==3.9.2",
    "numpy==2.1.2",
    "pillow==11.0.0",
    "scikit-learn==1.5.2",
    "seaborn==0.13.2",
]

requires-python = ">=3.10"